--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <title>WKU Design</title>
         <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
-
+        <script src="js/pace.min.js"></script>
+        <link rel="stylesheet" href="css/barber-shop-pace.css">
     </head>
     <body>
         <div class="wrapper">
             <nav class="menu">
                 <ul class="menu-items">
-                    <li class="menu-item"><a href="#" class="menu-link"><span>学校</span><br><span>THE SCHOOL</span></a></li>
-                    <li class="menu-item"><a href="#" class="menu-link"><span>招生</span><br><span>ADMISSION</span></a></li>
-                    <li class="menu-item"><a href="#" class="menu-link"><span>校友</span><br><span>ALUMNI</span></a></li>
-                    <li class="menu-item"><a href="#" class="menu-link"><span>活动</span><br><span>EVENTS</span></a></li>
-                    <li class="menu-item"><a href="#" class="menu-link"><span>媒体</span><br><span>SOCIAL</span></a></li>
-                    <li class="menu-item"><a href="#" class="menu-link"><span>联系</span><br><span>CONTACT</span></a></li>
+                    <li class="menu-item"><a data-scroll href="#school-page" class="menu-link"><span>学校</span><br><span>THE SCHOOL</span></a></li>
+                    <li class="menu-item"><a data-scroll href="#admission-page" class="menu-link"><span>招生</span><br><span>ADMISSION</span></a></li>
+                    <li class="menu-item"><a data-scroll href="#events-page" class="menu-link"><span>活动</span><br><span>EVENTS</span></a></li>
+                    <li class="menu-item"><a data-scroll href="#gallery-page" class="menu-link"><span>画廊</span><br><span>GALLERY</span></a></li>
+                    <li class="menu-item"><a data-scroll href="#contact-page" class="menu-link"><span>联系</span><br><span>CONTACT</span></a></li>
                 </ul>
                 <div class="hamburger-btn ">
                     <div id="layer-one"></div>
@@ -31,7 +31,7 @@
                     <div class="intro-panel"></div>
                     <div class="footer-dim"></div>
                 </div>
-                <div class="school-page">
+                <div class="school-page"  id="school-page">
                     <h1 class="en">THE SCHOOL</h1>
                     <div class="intro-div clearfix">
                         <div class="halftone-img"></div>
@@ -56,7 +56,7 @@
                                   events sponsored by trade organizations, and to meet design professionals during seminars and other special events,
                                   such as the world-class Thinking Creatively Conference.
                             </p>
-                            <div class="divider"></div>
+                            <div class="divider" id="admission-page"></div>
                             <h2>Admission</h2>
                             <p class="admission-text">
                                 Whether applying through the CommonApp or Kean University application, a portfolio of original, creative work is
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="events-page">
+                <div class="events-page" id="events-page">
                     <h1>UPCOMING EVENTS</h1>
                     <div class="events-box">
                         <div class="event-item event-1">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gallery-page">
+                <div class="gallery-page" id="gallery-page">
                     <div class="gallery-items clearfix">
                         <div class="row">
                             <div class="gallery-item">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact-page">
+                <div class="contact-page" id="contact-page">
                     <div id="allmap"></div>
                 </div>
                 <div class="footer">
@@ -195,11 +195,54 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="js/menu.js"></script>
     </body>
 </html>
+<script type="text/javascript" src="js/menu.js"></script>
+<script type="text/javascript" src="js/smooth-scroll.min.js"></script>
+<script   src="http://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/jquery.scrollify.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.panelSnap.js"></script>
+<script>
+  jQuery(function($) {
+    $('#').panelSnap();
+  });
+</script>
+<!-- <script>
+    $(function() {
+        $.scrollify({
+            section : ".scroll-js",
+            sectionName : "section-name",
+            interstitialSection : "",
+            easing: "easeOutExpo",
+            scrollSpeed: 1100,
+            offset : -50,
+            scrollbars: false,
+            standardScrollElements: "",
+            setHeights: false,
+            overflowScroll: true,
+            before:function() {},
+            after:function() {},
+            afterResize:function() {},
+            afterRender:function() {}
+        });
+    });
+</script> -->
+
+<!-- <script>
+    smoothScroll.init(
+        {
+            selector: '[data-scroll]', // Selector for links (must be a class, ID, data attribute, or element tag)
+            selectorHeader: null, // Selector for fixed headers (must be a valid CSS selector) [optional]
+            speed: 500, // Integer. How fast to complete the scroll in milliseconds
+            easing: 'easeInOutCubic', // Easing pattern to use
+            offset: 20, // Integer. How far to offset the scrolling anchor location in pixels
+            callback: function ( anchor, toggle ) {} // Function to run after scrolling
+        }
+    );
+</script> -->
+
 <script type="text/javascript">
-	//百度地图API功能
 	function loadJScript() {
 		var script = document.createElement("script");
 		script.type = "text/javascript";
